# nuloan

./: Active_Member.c  Active_Member.h  Apply_Loan.c  Apply_Loan.h  Apply_Loan_More_Information.c  Apply_Loan_More_Information.h  Apply_Loan_fianl.c  Apply_Loan_fianl.h  Approve_Reject_Application.c  Approve_Reject_Application.h  Auto_Check_application.c  Auto_Check_application.h  Bank_information.c  Bank_information.h  CMakeLists.txt  Check_Bank_Information.c  Check_Bank_Information.h  Check_Loan_Status.c  Check_Loan_Status.h  Check_Loan_Status_more.c  Check_Loan_Status_more.h  Check_Signup_Information.c  Check_Signup_Information.h  Check_User_Information.c  Check_User_Information.h  Check_email.c  Check_email.h  Eligibility.c  Eligibility.h  First_Page.c  First_Page.h  Forget_Password.c  Forget_Password.h  LOAN_APPLICATIONS.c  LOAN_APPLICATIONS.h  LOAN_REPAYMENT_SCHEDULES.c  LOAN_REPAYMENT_SCHEDULES.h  LOAN_TERMS.c  LOAN_TERMS.h  Login.c  (+20 more)
DataBase/: Eligibility.c  Id_Of_applications.txt
DataBase/ELIGIBILITY/: Eligibility.c
DataBase/LOAN_TRANSACTIONS/: Transactions.c
Structures/: Application.h  Bank_User_info.h  Eligibility.h  LOAN_APPLICATIONS.h  LOAN_HISTORY.h  LOAN_REPAYMENT_SCHEDULES.h  LOAN_TERMS.h  LOAN_TRANSACTIONS.h  Loans_Types.h  Roles.h  Transactions.h  User.h
